deploy/services/ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metrics-ml
  name: metrics-ml
  namespace: default
spec:
  selector:
    matchLabels:
      app: metrics-ml
  template:
    spec:
      containers:
        - name: metrics-ml
          image: metrics-ml
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - mountPath: /app/sharedsettings.json
              name: shared-config
              subPath: sharedsettings.json
            - mountPath: /certs/tls.crt
              name: certs
              subPath: tls.crt
              readOnly: true
      volumes:
        - name: shared-config
          configMap:
            name: metrics-shared-config
        - name: certs
          secret:
            secretName: metrics-selfsigned-tls
    metadata:
      namespace: default
      name: metrics-ml
      labels:
        app: metrics-ml
