deploy/services/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics-gateway
  name: metrics-gateway
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: metrics-gateway
