deploy/services/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-identity
  namespace: default
  labels:
    app: metrics-identity
spec:
  ports:
    - port: 80
  selector:
    app: metrics-identity
