deploy/services/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-ui
  labels:
    app: metrics-ui
  namespace: default
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
  selector:
    app: metrics-ui
