deploy/services/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: default
  labels:
    app: metrics-ingress
spec:
  rules:
    - host: metrics-ui
      http:
        paths:
          - backend:
              serviceName: metrics-gateway
              servicePort: 80
            path: /api
          - backend:
              serviceName: metrics-gateway
              servicePort: 80
            path: /notifications
